T2/Z2/.gcc.out
/rhome/b/bkarovic1/workspace/UUP/T2/Z2/main.c: In function ‘main’:
/rhome/b/bkarovic1/workspace/UUP/T2/Z2/main.c:11:9: warning: missing terminating " character
  printf("Dobrodosli kod Vaseg kucnog ljekara! \n);
         ^
/rhome/b/bkarovic1/workspace/UUP/T2/Z2/main.c:11:9: error: missing terminating " character
  printf("Dobrodosli kod Vaseg kucnog ljekara! \n);
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/rhome/b/bkarovic1/workspace/UUP/T2/Z2/main.c:12:2: error: expected expression before ‘float’
  float SP,DP,puls;
  ^~~~~
/rhome/b/bkarovic1/workspace/UUP/T2/Z2/main.c:34:1: error: expected ‘;’ before ‘}’ token
 }
 ^
